syntax = "proto2";

package mediapipe;

message ImageData {
    optional uint64 width = 1 [default = 640];
    optional uint64 height = 2 [default = 480];
    optional uint64 frame_id = 3 [default = 0];
    optional uint32 image_type = 4 [default = 2];
    optional bool first_person = 5 [default = false];
}